# kaleidoscope

./: .clang-format  CMakeLists.txt  codegen.cpp  compile_flags.txt  context.cpp  jit.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp
ast/: function.cpp  prototype.cpp
ast/expression/: base.cpp  binary.cpp  call.cpp  number.cpp  variable.cpp
